# flarrow-benchmark

./: .gitignore  Cargo.toml  README.md  justfile  pyrightconfig.json
bench/: latencies.html  throughputs.html
docs/: book.toml
docs/src/: SUMMARY.md  flarrow-benchmark.md  iridis-benchmark.md  organization.md
draw/: pyproject.toml
draw/src/draw/: __init__.py
message/: Cargo.toml
message/src/: lib.rs
nodes/sink/: Cargo.toml
nodes/sink/src/: lib.rs
nodes/source/: Cargo.toml
nodes/source/src/: lib.rs
src/: lib.rs
