[workspace]
resolver = "3"
members = ["message", "nodes/sink", "nodes/source"]

[workspace.dependencies]
iridis-api = "0.3"
iridis = "0.3"
iridis-message = "0.3"

message = { path = "message" }

[package]
name = "iridis-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
iridis = { workspace = true }

sink = { path = "nodes/sink" }
source = { path = "nodes/source" }

[features]
raw = ["sink/raw", "source/raw"]
