[project]
name = "draw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Enzo Le Van", email = "dev@enzo-le-van.fr" }]
requires-python = ">=3.13"
dependencies = ["cutecharts==1.0.0", "pandas>=2.2.3"]

[project.scripts]
draw = "draw:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
