[package]
name = "sink"
version = "0.1.0"
edition = "2024"

[features]
cdylib = []
raw = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.3"
uhlc = { version = "0.8", features = ["std"] }
tokio = { version = "1", features = ["full"] }

flarrow-api = { workspace = true }
message = { workspace = true }
